# jusTokenMax

./: .gitignore  .mcp.json  LICENSE  README.md  README.txt
.claude-plugin/: plugin.json
.github/: FUNDING.yml
benchmarks/: README.md  RESULTS.md  benchmark.py
commands/: branch.md  compress-memory.md  index.md  learn.md  optimize.md  query.md  retrieve.md  stats.md  terse.md
docs/wiki/: Configuration.md  Cross-Agent-Setup.md  FAQ.md  Features.md  Home.md  Installation.md  MCP-Proxy.md  Try-It.md
hooks/: hooks.json  justokenmax_read.py
integrations/opencode/: README.md  justokenmax.js
node/: package.json
python/: README.md  pyproject.toml
python/justokenmax/: __init__.py  __main__.py  cache.py  cli.py  codeindex.py  config.py  csvtable.py  delta.py  discover.py  image.py  install.py  jsoncompress.py  lockfile.py  logs.py  mcp_server.py  notebook.py  optimize.py  outline.py  pdf.py  redact.py  sessions.py  tokens.py
python/tests/: conftest.py  test_cli.py  test_code_outline.py  test_codeindex.py  test_codeindex_deep.py  test_config.py  test_csv.py  test_delta.py  test_discover.py  test_hook.py  test_image.py  test_install.py  test_jsoncompress.py  test_lockfile.py  test_logs.py  test_mcp.py  test_notebook.py  test_optimize.py  test_outline.py  test_pdf.py  test_redact.py  test_sessions.py  test_tokens.py
skills/attachments/: SKILL.md
skills/cache-align/: SKILL.md
skills/chat-branch/: SKILL.md
skills/code-index/: SKILL.md
skills/terse-output/: SKILL.md
